# akame

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  gen_certs.sh
implant/: Cargo.toml
implant/src/: config.rs  exec.rs  main.rs  sysinfo.rs
server/: Cargo.toml
server/src/: api.rs  banner.rs  cli.rs  error.rs  listener.rs  main.rs  session.rs  task.rs
stager/: stager.py
