[package]
name    = "phantom-implant"
version = "0.1.0"
edition = "2021"
authors = ["Light <neok1ra@proton.me>"]

[[bin]]
name = "implant"
path = "src/main.rs"

[dependencies]
tokio          = { version = "1",    features = ["full"] }
tokio-rustls   = "0.26"
rustls         = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
serde          = { version = "1",    features = ["derive"] }
serde_json     = "1"
chrono         = { version = "0.4",  features = ["serde"] }
anyhow         = "1"
rand           = "0.8"
base64         = "0.22"
uuid           = { version = "1",    features = ["v4"] }

[profile.release]
# strip debug symbols — smaller binary, less forensic surface
strip    = true
opt-level = "z"   # optimize for size
lto      = true
panic    = "abort"
