[package]
name    = "phantom-server"
version = "0.1.0"
edition = "2021"
authors = ["Light <neok1ra@proton.me>"]

[[bin]]
name = "phantom"
path = "src/main.rs"

[dependencies]
tokio          = { version = "1",    features = ["full"] }
tokio-rustls   = "0.26"
rustls         = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
axum           = { version = "0.7",  features = ["ws"] }
tower          = "0.4"
tower-http     = { version = "0.5",  features = ["cors", "trace"] }
serde          = { version = "1",    features = ["derive"] }
serde_json     = "1"
uuid           = { version = "1",    features = ["v4"] }
chrono         = { version = "0.4",  features = ["serde"] }
clap           = { version = "4",    features = ["derive"] }
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow         = "1"
thiserror      = "1"
dashmap        = "6"
tokio-util     = { version = "0.7",  features = ["codec"] }
bytes          = "1"
rand           = "0.8"
hex            = "0.4"
sha2           = "0.10"
